[tool.poetry]
name = "chef-recipes"
version = "1.0.0"
description = "Home recipe management app."
authors = ["Your Name <you@example.com>"]
license = "MIT"

packages = [
    { include = "chef", from = "src/python" }
]

include = [
    { path = "src/js/chef/dist/*", format = "wheel" },
    { path = "src/js/chef/dist/assets/*", format = "wheel" }
]


[tool.poetry.scripts]
chef = "chef.main:serve"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
python-multipart = "^0.0.6"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
